--- a/SampleApp/SampleApp.iOS/Info.plist
+++ b/SampleApp/SampleApp.iOS/Info.plist
@@ -33,6 +33,6 @@
     <key>CFBundleName</key>
     <string>SampleApp</string>
     <key>XSAppIconAssets</key>
-    <string>Assets.xcassets/AppIcon.appiconset</string>
+    <string>Resizetizer.xcassets/appicon.appiconset</string>
 </dict>
 </plist>
