Run earlier for appicons on ios

--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -32,7 +32,7 @@
 
 		<ResizetizeCollectImagesBeforeTargets>
 			$(ResizetizeCollectImagesBeforeTargets);
-			_CollectBundleResources;_CompileImageAssets;
+			_CollectBundleResources;_BeforeCoreCompileImageAssets;
 		</ResizetizeCollectImagesBeforeTargets>
 
 		<ResizetizeAfterTargets>
