Add a subfolder to output dir to avoid files.cache conflict
This should fix #23

A recent change to Xamarin.Android to add some caching logic meant that a files.cache file was created up a directory from where `LibraryResourceDirectories` dirs were specified.  The problem is when using GooglePlayServices, a similar techinque was used, and files.cache from both cases were conflicting with each other.

--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -148,7 +148,7 @@
 
 		<!-- Where in obj/ to store these -->
 		<PropertyGroup>
-			<ResizetizerIntermediateOutputPath>$(IntermediateOutputPath)resizetizer\</ResizetizerIntermediateOutputPath>
+			<ResizetizerIntermediateOutputPath>$(IntermediateOutputPath)resizetize\r\</ResizetizerIntermediateOutputPath>
 		</PropertyGroup>
 
 		<!-- Resize the images -->
@@ -226,7 +226,7 @@
 
 	<Target Name="_CleanResizetizer">
 		<PropertyGroup>
-			<ResizetizerIntermediateOutputPath>$(IntermediateOutputPath)resizetizer\</ResizetizerIntermediateOutputPath>
+			<ResizetizerIntermediateOutputPath>$(IntermediateOutputPath)resizetize\r\</ResizetizerIntermediateOutputPath>
 		</PropertyGroup>
 
 		<RemoveDir Directories="$(ResizetizerIntermediateOutputPath)" Condition="Exists ('$(ResizetizerIntermediateOutputPath)' )" />
