--- a/Resizetizer.NT/Resizetizer.NT.csproj
+++ b/Resizetizer.NT/Resizetizer.NT.csproj
@@ -56,19 +56,27 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
-		<None Include="$(PkgSvg_Custom)\lib\net452\Svg.Custom.dll" Visible="False" Pack="True" PackagePath="build\">
+		<None Include="$(PkgSvg_Custom)\lib\net461\Svg.Custom.dll" Visible="False" Pack="True" PackagePath="build\">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
-		<None Include="$(PkgSvg_Custom)\lib\net452\Svg.Custom.pdb" Visible="False" Pack="True" PackagePath="build\">
+		<None Include="$(PkgSvg_Custom)\lib\net461\Svg.Custom.pdb" Visible="False" Pack="True" PackagePath="build\">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
-		<None Include="$(PkgSvg_Skia)\lib\net452\Svg.Skia.dll" Visible="False" Pack="True" PackagePath="build\">
+		<None Include="$(PkgSvg_Picture)\lib\net461\Svg.Picture.dll" Visible="False" Pack="True" PackagePath="build\">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
-		<None Include="$(PkgSvg_Skia)\lib\net452\Svg.Skia.pdb" Visible="False" Pack="True" PackagePath="build\">
+		<None Include="$(PkgSvg_Picture)\lib\net461\Svg.Picture.pdb" Visible="False" Pack="True" PackagePath="build\">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+
+		<None Include="$(PkgSvg_Skia)\lib\net461\Svg.Skia.dll" Visible="False" Pack="True" PackagePath="build\">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+
+		<None Include="$(PkgSvg_Skia)\lib\net461\Svg.Skia.pdb" Visible="False" Pack="True" PackagePath="build\">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
@@ -80,7 +88,7 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
-		<None Include="$(PkgSkiaSharp)\lib\net45\SkiaSharp.dll" Visible="False" Pack="True" PackagePath="build\">
+		<None Include="$(PkgSkiaSharp)\lib\net462\SkiaSharp.dll" Visible="False" Pack="True" PackagePath="build\">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
@@ -92,11 +100,11 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
-		<None Include="$(PkgSkiaSharp_HarfBuzz)\lib\net45\SkiaSharp.HarfBuzz.dll" Visible="False" Pack="True" PackagePath="build\">
+		<None Include="$(PkgSkiaSharp_HarfBuzz)\lib\net462\SkiaSharp.HarfBuzz.dll" Visible="False" Pack="True" PackagePath="build\">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
-		<None Include="$(PkgHarfBuzzSharp)\lib\net45\HarfBuzzSharp.dll" Visible="False" Pack="True" PackagePath="build\">
+		<None Include="$(PkgHarfBuzzSharp)\lib\net462\HarfBuzzSharp.dll" Visible="False" Pack="True" PackagePath="build\">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 
@@ -119,35 +127,38 @@
 		<None Include="$(PkgSystem_Runtime_CompilerServices_Unsafe)\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
 		<None Include="$(PkgSystem_Drawing_Common)\lib\netstandard2.0\System.Drawing.Common.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
 		<None Include="$(PkgSystem_ObjectModel)\lib\netstandard1.3\System.ObjectModel.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
-		<None Include="$(PkgSvg_Custom)\lib\net452\Svg.Custom.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
-		<None Include="$(PkgSvg_Custom)\lib\net452\Svg.Custom.pdb" Visible="False" Pack="True" PackagePath="buildTransitive\" />
-		<None Include="$(PkgSvg_Skia)\lib\net452\Svg.Skia.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
-		<None Include="$(PkgSvg_Skia)\lib\net452\Svg.Skia.pdb" Visible="False" Pack="True" PackagePath="buildTransitive\" />
+		<None Include="$(PkgSvg_Custom)\lib\net461\Svg.Custom.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
+		<None Include="$(PkgSvg_Custom)\lib\net461\Svg.Custom.pdb" Visible="False" Pack="True" PackagePath="buildTransitive\" />
+		<None Include="$(PkgSvg_Picture)\lib\net461\Svg.Picture.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
+		<None Include="$(PkgSvg_Picture)\lib\net461\Svg.Picture.pdb" Visible="False" Pack="True" PackagePath="buildTransitive\" />
+		<None Include="$(PkgSvg_Skia)\lib\net461\Svg.Skia.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
+		<None Include="$(PkgSvg_Skia)\lib\net461\Svg.Skia.pdb" Visible="False" Pack="True" PackagePath="buildTransitive\" />
 		<None Include="$(PkgFizzler)\lib\netstandard2.0\Fizzler.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
 		<None Include="$(PkgSystem_IO_UnmanagedMemoryStream)\lib\netstandard1.3\System.IO.UnmanagedMemoryStream.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
-		<None Include="$(PkgSkiaSharp)\lib\net45\SkiaSharp.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
+		<None Include="$(PkgSkiaSharp)\lib\net462\SkiaSharp.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
 		<None Include="$(PkgSkiaSharp)\runtimes\osx\native\libSkiaSharp.dylib" Visible="False" Pack="True" PackagePath="buildTransitive\" />
 		<None Include="$(PkgSkiaSharp)\runtimes\win-x86\native\libSkiaSharp.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
-		<None Include="$(PkgSkiaSharp_HarfBuzz)\lib\net45\SkiaSharp.HarfBuzz.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
-		<None Include="$(PkgHarfBuzzSharp)\lib\net45\HarfBuzzSharp.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
+		<None Include="$(PkgSkiaSharp_HarfBuzz)\lib\net462\SkiaSharp.HarfBuzz.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
+		<None Include="$(PkgHarfBuzzSharp)\lib\net462\HarfBuzzSharp.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
 		<None Include="$(PkgHarfBuzzSharp)\runtimes\osx\native\libHarfBuzzSharp.dylib" Visible="False" Pack="True" PackagePath="buildTransitive\" />
 		<None Include="$(PkgHarfBuzzSharp)\runtimes\win-x86\native\libHarfBuzzSharp.dll" Visible="False" Pack="True" PackagePath="buildTransitive\" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Fizzler" Version="1.2.0" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="HarfBuzzSharp" Version="2.6.1.1" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.Build.Framework" Version="16.4.0" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.4.0" PrivateAssets="all" />
-		<PackageReference Include="SkiaSharp" Version="1.68.1" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="SkiaSharp.HarfBuzz" Version="1.68.1" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="Svg.Skia" Version="0.1.6" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="Svg.Custom" Version="0.1.6" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="System.Memory" Version="4.5.3" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="System.Buffers" Version="4.4.0" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="HarfBuzzSharp" Version="2.6.1.6" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.Build.Framework" Version="16.6.0" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.6.0" PrivateAssets="all" />
+		<PackageReference Include="SkiaSharp" Version="2.80.1" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.80.1" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Svg.Skia" Version="0.4.1" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Svg.Custom" Version="0.4.1" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="Svg.Picture" Version="0.4.1" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="System.Memory" Version="4.5.4" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="System.Buffers" Version="4.5.1" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="System.IO.UnmanagedMemoryStream" Version="4.3.0" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="System.Numerics.Vectors" Version="4.5.0" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.2" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.1" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="System.Drawing.Common" Version="4.7.0" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="System.ObjectModel" Version="4.3.0" GeneratePathProperty="true" PrivateAssets="all" />
 	</ItemGroup>
