--- a/.github/workflows/pr_build.yaml
+++ b/.github/workflows/pr_build.yaml
@@ -1,9 +1,9 @@
-name: Build
+name: PR Build
 
-on: 
-  push:
-  release:
-    types: [published]
+on:
+  pull_request:
+    branches:
+    - master
     
 jobs:
     build:
@@ -18,18 +18,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.100
-      - name: Build and Pack - Release
-        if: github.event_name == 'release'
-        run: |
-          arrTag=(${GITHUB_REF//\// })
-          VERSION="${arrTag[2]}"
-          VERSION="${VERSION//v}"
-          mkdir ./output
-          mkdir ./artifacts
-          dotnet build --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
-          dotnet pack --output ./artifacts -p:PackageVersion=$VERSION -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
       - name: Build and Pack - CI
-        if: github.event_name != 'release'
         run: |
           VERSION=$NUPKG_MAJOR-ci$GITHUB_RUN_ID
           mkdir ./output
@@ -38,34 +27,3 @@ jobs:
           dotnet pack --output ./artifacts -p:PackageVersion=$VERSION -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
       - name: Run Tests
         run: dotnet test --configuration Release ./Resizetizer.NT.Tests/Resizetizer.NT.Tests.csproj
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: NuGet
-          path: ./artifacts
-
-    publish:
-      name: Publish
-      needs: build
-      runs-on: windows-latest
-      if: github.event_name == 'release'
-      steps:
-        - name: Download Artifacts
-          uses: actions/download-artifact@v1
-          with:
-            name: NuGet
-        - name: Setup .NET Core
-          uses: actions/setup-dotnet@v1
-          with:
-            dotnet-version: 3.1.100
-        - name: Setup NuGet
-          uses: nuget/setup-nuget@v1
-          with:
-            nuget-api-key: ${{ secrets.NUGET_API_KEY }}
-            nuget-version: 'latest'
-        - name: Push NuGet
-          run: |
-            nuget sources add -Name "GPR" -Source "https://nuget.pkg.github.com/Redth/index.json" -UserName Redth -Password ${{ secrets.GITHUB_TOKEN }}
-            nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source "GPR"
-            nuget push NuGet\*.nupkg --source "GPR" --skip-duplicate
-            nuget push NuGet\*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_ORG_API_KEY }} --skip-duplicate
