--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on:
   push:
   release:
     types: [published]
+  pull_request:
+    branches:
+    - master
     
 jobs:
     build:
@@ -39,6 +42,7 @@ jobs:
       - name: Run Tests
         run: dotnet test --configuration Release ./Resizetizer.NT.Tests/Resizetizer.NT.Tests.csproj
       - name: Upload Artifacts
+        if: github.event_name == 'push' || github.event_name == 'release'
         uses: actions/upload-artifact@v1
         with:
           name: NuGet
