Add SharedFont item group

--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -3,6 +3,7 @@
 
 	<ItemGroup>
 		<AvailableItemName Include="SharedImage" />
+        <AvailableItemName Include="SharedFont" />
 	</ItemGroup>
 
 	<UsingTask
