--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           mkdir ./output
           mkdir ./artifacts
           dotnet build --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
-          dotnet pack --output ./artifacts -p:PackageVersion=$VERSION -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
+          dotnet pack --output ./artifacts -p:PackageVersion=$VERSION --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
       - name: Build and Pack - CI
         if: github.event_name != 'release'
         run: |
@@ -38,7 +38,7 @@ jobs:
           mkdir ./output
           mkdir ./artifacts
           dotnet build --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
-          dotnet pack --output ./artifacts -p:PackageVersion=$VERSION -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
+          dotnet pack --output ./artifacts -p:PackageVersion=$VERSION --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
       - name: Run Tests
         run: dotnet test --configuration Release ./Resizetizer.NT.Tests/Resizetizer.NT.Tests.csproj
       - name: Upload Artifacts
