Add support for aliases
Aliases can be added using the Link="xxx" attribute/element in msbuild. Not only will this appear nicely in the IDE when multiple files using the same name are included, but they can also be organized.

--- a/SampleApp/SampleApp/SampleApp.csproj
+++ b/SampleApp/SampleApp/SampleApp.csproj
@@ -14,9 +14,11 @@
     <SharedImage Include="camera.svg" BaseSize="44" />
     <SharedImage Include="camera2.svg" BaseSize="44" TintColor="#FF00FF00" />
     <SharedImage Include="loginbg.png" BaseSize="123,105" />
+    <SharedImage Include="loginbg.png" BaseSize="123,105" Link="changed_name.png" />
 
     <SharedImage Include="appicon.svg" IsAppIcon="true" ForegroundFile="appiconfg.svg" ForegroundScale="0.65" />
     <SharedImage Include="camera.svg" IsAppIcon="true" ForegroundFile="appiconfg.svg" ForegroundScale="0.65" />
+    <SharedImage Include="camera.svg" IsAppIcon="true" ForegroundFile="appiconfg.svg" ForegroundScale="0.65" Link="new_name" />
   </ItemGroup>
 
 </Project>
