Link generated font android asset
Otherwise it gets the whole path under obj

--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -265,7 +265,9 @@
 		<!-- Android -->
 		<ItemGroup Condition="'$(_ResizetizerIsAndroidApp)' == 'True'">
 
-			<AndroidAsset Include="@(_SharedFontCopied)" Condition="'@(_SharedFontCopied)' != ''" />
+			<AndroidAsset Include="@(_SharedFontCopied)" Condition="'@(_SharedFontCopied)' != ''">
+				<Link>$([System.IO.Path]::GetFileName(%(_SharedFontCopied.Identity)))</Link>
+			</AndroidAsset>
 
 		</ItemGroup>
 
