Move error message into property to share

--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -33,6 +33,10 @@
 		<_SharedFontStampFile>$(IntermediateOutputPath)sharedfont.stamp</_SharedFontStampFile>
 		
 		<ResizetizerIncludeSelfProject Condition="'$(ResizetizerIncludeSelfProject)' == ''">False</ResizetizerIncludeSelfProject>
+
+		<_ResizetizerDefaultInvalidFilenamesErrorMessage>
+			One or more invalid file names were detected.  File names must be lowercase, start and end with a letter character, and contain only alphanumeric characters or underscores: &#13;&#10;
+		</_ResizetizerDefaultInvalidFilenamesErrorMessage>
 	</PropertyGroup>
 	
 	<PropertyGroup Condition="'$(TargetFrameworkIdentifier)' != '.NETCoreApp'">
@@ -218,7 +222,7 @@
 
 		<DetectInvalidResourceOutputFilenamesTask
 			Items="@(SharedFont)"
-			ErrorMessage="One or more invalid file names were detected.  File names must be lowercase, start and end with a letter character, and contain only alphanumeric characters or underscores: &#13;&#10;">
+			ErrorMessage="$(_ResizetizerDefaultInvalidFilenamesErrorMessage)">
 		</DetectInvalidResourceOutputFilenamesTask>
 
 		<!-- Copy font files over -->
@@ -315,7 +319,7 @@
 
 		<DetectInvalidResourceOutputFilenamesTask
 			Items="@(SharedImage)"
-			ErrorMessage="One or more invalid file names were detected.  File names must be lowercase, start and end with a letter character, and contain only alphanumeric characters or underscores: &#13;&#10;">
+			ErrorMessage="$(_ResizetizerDefaultInvalidFilenamesErrorMessage)">
 		</DetectInvalidResourceOutputFilenamesTask>
 
 		<!-- Where in obj/ to store these -->
